// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section/> render properly with passed nodes 1`] = `
<div
  class="Section__Wrapper-sc-18z2ih3-0 cLDUAl"
>
  <div>
    <p>
      Lorem ipsum dolor sit
    </p>
  </div>
</div>
`;

exports[`<Section/> render properly with passed props 1`] = `
<div
  class="Section__Wrapper-sc-18z2ih3-0 jtBEsM"
>
  <div>
    <p>
      Lorem ipsum dolor sit
    </p>
  </div>
</div>
`;
